[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]
include = ["adtl*", "adtl.autoparser*"]

[tool.setuptools]

  [tool.setuptools.package-data]
    "adtl.autoparser" = ["config/*.toml"]

[project]
name = "adtl"
version = "0.6.1"
description = "Another data transformation language"
authors = [
  {name = "Abhishek Dasgupta" },
  {name = "Pip Liggins" }
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "tomli>=2.0.0",
  "pint>=0.24.4",
  "requests>=2.0.0",
  "fastjsonschema==2.16.*",
  "tqdm",
  "python-dateutil",
  "more_itertools",
  "pandas==2.*",
  ]
  scripts = { adtl = "adtl:main", adtl-autoparser = "adtl.autoparser:main" }
  urls = { Home = "https://github.com/globaldothealth/adtl" }

[tool.uv]
package = true
dev-dependencies = [
    "adtl[all]"
]

[project.optional-dependencies]
autoparser = [
    "numpy==2.*",
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.2",
    "eval_type_backport; python_version < '3.10'",
    "google-generativeai>=0.8.3"
    ]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "syrupy==4.*",
  "responses",
  "pytest-unordered",
  "adtl[parquet, autoparser]"
]
docs = [
  "sphinx==8.*; python_version >= '3.10'",
  "sphinx-book-theme",
  "sphinxcontrib-mermaid",
  "myst-nb==1.*"
]
parquet = [
  "polars"
]
all = [
  "adtl[test,docs]"
]

[tool.coverage.run]
omit = ["tests/*", "src/adtl/autoparser/toml_writer.py"]
