[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]

  [tool.setuptools.packages.find]
    where = ["src"]
    include = ["adtl*", "adtl.autoparser*"]

  [tool.setuptools.package-data]
    "adtl.autoparser" = ["config/*.toml"]

[project]
name = "adtl"
version = "0.13.1"
description = "Another data transformation language"
authors = [
  {name = "Abhishek Dasgupta" },
  {name = "Pip Liggins" }
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "tomli>=2.0.0",
  "pint>=0.24.4",
  "requests>=2.0.0",
  "fastjsonschema==2.16.*",
  "tqdm",
  "python-dateutil",
  "more_itertools",
  "pandas[parquet]==2.*",
  "joblib"
]
  scripts = { adtl = "adtl.cli:main", adtl-autoparser = "adtl.autoparser:main" }

[project.urls]
homepage = "https://adtl.readthedocs.io"
github = "https://github.com/globaldothealth/adtl"
releasenotes = "https://github.com/globaldothealth/adtl/releases"

[tool.uv]
package = true
dev-dependencies = [
    "adtl[all]"
]

[project.optional-dependencies]
autoparser = [
    "numpy==2.*",
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.2",
    "eval_type_backport; python_version < '3.10'",
    "pandera[pandas]",
    "fastparquet>=2024.11.0",
    "tiktoken>=0.9.0",
    "google-genai>=1.47.0",
]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "syrupy==4.*",
  "responses",
  "pytest-unordered",
  "adtl[autoparser]"
]
docs = [
  "sphinx==8.*; python_version >= '3.10'",
  "sphinx-book-theme",
  "sphinxcontrib-mermaid",
  "myst-nb==1.*",
  "adtl[autoparser]"
]
all = [
  "adtl[test,docs]"
]

[tool.coverage.run]
omit = ["tests/*", "src/adtl/autoparser/toml_writer.py"]
